# CEX_RUST

./: .gitignore  Cargo.toml
crates/db/: Cargo.toml
crates/db-poller/: Cargo.toml
crates/db-poller/src/: main.rs
crates/db-poller/src/controllers/: create_order.rs  delete_order.rs  mod.rs
crates/db-poller/src/utils/: mod.rs
crates/db/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: main.rs
crates/engine/src/balance/: mod.rs
crates/engine/src/ingester/: mod.rs
crates/engine/src/internal_types/: mod.rs
crates/engine/src/market/: mod.rs
crates/engine/src/matching/: delete.rs  mod.rs
crates/engine/src/messages/: mod.rs  types.rs
crates/engine/src/ops/: create_order.rs  mod.rs  onramp.rs
crates/engine/src/redis_manager/: mod.rs
crates/engine/src/router/: mod.rs
crates/engine/src/services/: create_order.rs  delete_order.rs  get_balance.rs  get_depth.rs  mod.rs  onramp.rs
crates/engine/src/store/: mod.rs
crates/engine/src/utils/: mod.rs
crates/router/: Cargo.toml
crates/router/src/: main.rs
crates/router/src/error/: mod.rs
crates/router/src/middleware/: mod.rs
crates/router/src/redis/: mod.rs
crates/router/src/routes/: mod.rs
crates/router/src/routes/auth/: mod.rs
crates/router/src/routes/health/: mod.rs
crates/router/src/routes/orders/: mod.rs
crates/router/src/types/: app.rs  mod.rs  order.rs  user.rs
crates/router/src/utils/: mod.rs
crates/types/: Cargo.toml
crates/types/src/: engine.rs  lib.rs  user.rs
crates/web-socket-server/: Cargo.toml
crates/web-socket-server/src/: main.rs
crates/web-socket-server/src/store/: mod.rs
crates/web-socket-server/src/types/: mod.rs
crates/web-socket-server/src/utils/: depth_push_interval.rs  mod.rs  redis_handler.rs  websocket_handler.rs
migrations/: 20260617100538_create_users_table.sql  20260712205417_update_user_table_add_create_order_table.sql
