[workspace]
resolver = "3"
members = ["crates/router", "crates/db"]

[workspace.dependencies]
dotenvy = "0.15.7"
serde_json = "1.0.150"
env_logger = "0.11.10"
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.9.0", features = ["chrono", "macros", "migrate", "postgres", "runtime-tokio", "uuid"] }