[workspace]
resolver = "3"
members = ["crates/router", "crates/db", "crates/types", "crates/engine", "crates/db-poller"]

[workspace.dependencies]
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
env_logger = "0.11.10"
tokio = { version = "1.52.3", features = ["full"] }
sqlx = { version = "0.9.0", features = ["chrono", "macros", "migrate", "postgres", "runtime-tokio", "uuid"] }
redis = { version = "1.0", features = ["connection-manager", "tokio-comp"] }
uuid = { version = "1.23.3", features = ["v4"] }
