[package]
name = "db-poller"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx_postgres = { package = "db", path = "../db" }
sqlx = { workspace = true }
types = { package = "types", path = "../types" }
tokio = { workspace = true }
redis = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid ={ workspace = true}
