[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
redis = { workspace = true }
tokio = { workspace = true }
dotenvy = { workspace = true }
types = { package = "types", path = "../types" }
serde_json = { workspace = true }
uuid = { workspace = true }
rust_decimal = "1.42.1"
